welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: not found: value estSur
  if (estSur Biscuit()) {
      ^